# libtq

./: .gitignore  CMakeLists.txt  KAOMOJI  LICENSE
android-bundle/: CMakeLists.txt
assets/: README.md  smw_athletic.oga
cmake/: FindBrotliCommon.cmake  FindBrotliDec.cmake  FindFreeType.cmake  FindHarfBuzz.cmake  FindOgg.cmake  FindVorbis.cmake  FindVorbisFile.cmake
examples/: audio-music.c  callbacks.c  core-hello.c  core-keyboard.c  core-mouse.c  defense.c  emscripten.c  graphics-blend.c  graphics-surfaces.c  graphics-text.c  graphics-textures.c  hello.c  jestan.c  sounds.c  text.c
include/tq/: tq.h
src/: tq.c  tq_al_audio.c  tq_al_mixer.c  tq_android_display.c  tq_api.c  tq_audio.c  tq_audio.h  tq_audio_dec.c  tq_audio_dec.h  tq_clock.h  tq_core.c  tq_core.h  tq_display.h  tq_error.c  tq_error.h  tq_file.c  tq_file.h  tq_gl_renderer.c  tq_gles2_renderer.c  tq_graphics.c  tq_graphics.h  tq_handle_list.c  tq_handle_list.h  tq_image_loader.c  tq_image_loader.h  tq_log.c  tq_log.h  tq_math.c  tq_math.h  tq_mem.h  tq_meta.c  tq_meta.h  tq_mixer.h  tq_null_audio.c  tq_null_renderer.c  tq_posix_clock.c  tq_posix_threads.c  tq_renderer.h  tq_sdl_clock.c  tq_sdl_display.c  (+19 more)
